# rs-count-fasta

./: .gitignore  Cargo.toml  README.md  artifacts.json  changelog.rss  count-fasta-rs-installer.sh.txt  example.csv  index.html  oranda.json
artifacts/: index.html
changelog/: index.html
changelog/v0.2.1/: index.html
changelog/v0.3.0/: index.html
src/: main.rs
